--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,63 @@ code {
   max-height: 120px; /* adjust the height as needed */
   overflow-y: scroll;
 }
+
+
+.row.justify-content-center {
+  padding-left: 20px;
+}
+
+
+@media screen and (max-width: 900px) and (min-width: 500px) {
+  .testing {
+    display: block;
+  }
+  .media{
+    display: none;
+  }
+  .finalTesting{
+    display: none;
+  }
+}
+@media (min-width: 901px) {
+  .testing {
+    display: none;
+  }
+  .media {
+    display: block;
+  }
+  .finalTesting{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 499px) and (min-width: 200px) {
+  .testing {
+    display: none;
+  }
+  .media{
+    display: none;
+  }
+  .finalTesting{
+    display: block;
+  }
+}
+
+
+
+.navbar {
+  position: relative;
+}
+
+@media (max-width: 991.98px) {
+  .navbar-collapse {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    padding: 1rem;
+    background-color: white;
+  }
+}
